--- a/MSR/MSR-4.0-Avaloq.jrxml
+++ b/MSR/MSR-4.0-Avaloq.jrxml
@@ -51,7 +51,7 @@
 		<defaultValueExpression><![CDATA["NEWSLETTER TITLE"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="customer" class="java.lang.String">
-		<defaultValueExpression><![CDATA["dbg"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["bsct"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="subsection" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
@@ -63,7 +63,7 @@
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
 	<parameter name="selectedDate" class="java.lang.String">
-		<defaultValueExpression><![CDATA["20190801"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["20191001"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="is_mesi" class="java.lang.Boolean">
 		<defaultValueExpression><![CDATA[true]]></defaultValueExpression>
@@ -121,10 +121,10 @@
 				<textElement>
 					<font fontName="Arial" size="11"/>
 				</textElement>
-				<text><![CDATA[Avaloq core banking solution is based on an Avaloq customization named Avaloq Source Master (ASM) that enables multiple Business Units (BU) on a single Avaloq instance.]]></text>
+				<text><![CDATA[Avaloq core banking solution is based on an Avaloq customization named Avaloq Core Platform (ACP) that enables multiple Business Units (BU) on a single Avaloq instance.]]></text>
 			</staticText>
 		</band>
-		<band height="123">
+		<band height="135">
 			<staticText>
 				<reportElement style="NormalText" positionType="Float" x="0" y="0" width="730" height="20" isPrintWhenDetailOverflows="true" uuid="81504353-c30b-4b19-8344-5bc9c77ea388"/>
 				<textElement>
@@ -133,7 +133,7 @@
 				<text><![CDATA[The solution identifies different BUs that are the following:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="730" height="80" isPrintWhenDetailOverflows="true" uuid="184120c9-1c88-4f6f-a2ad-f2daed0e6140">
+				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="730" height="90" isPrintWhenDetailOverflows="true" uuid="184120c9-1c88-4f6f-a2ad-f2daed0e6140">
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 					<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
 				</reportElement>
@@ -144,11 +144,11 @@
 				</textElement>
 				<text><![CDATA[•	Client Business Unit - Client segregated BU that contains customer data protected within Business Partners objects (BP).
 •	Public Business Unit - Common Avaloq objects that are shared with all other BU. No customer data is present in this BU.
-•	Sentinel Business Unit - Virtual BU that is transversal to all other BU. The Sentinel environment enables access to data of the Client Business Units from the same entry point, including the common objects defined in the Public BU. The main purpose is to have a centralized view of orderbooks by Back Office. Avaloq Sourcing (Switzerland & Liechtenstein) SA users are defined in the Sentinel for a centralized service delivery. No customer data is directly present in this BU.
+•	Sentinel Business Unit - Virtual BU that is transversal to all other BU. The Sentinel environment enables access to data of the Client Business Units from the same entry point, including the common objects defined in the Public BU. The main purpose is to have a centralized view of orderbooks by Global Banking Operations (GBO). Avaloq Sourcing (Switzerland & Liechtenstein) SA users are defined in the Sentinel for a centralized service delivery. No customer data is directly present in this BU.
 ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="103" width="730" height="20" isPrintWhenDetailOverflows="true" uuid="21af88d4-875c-4cb7-a29b-3db039ffd8f3"/>
+				<reportElement style="NormalText" positionType="Float" x="-1" y="110" width="730" height="20" isPrintWhenDetailOverflows="true" uuid="21af88d4-875c-4cb7-a29b-3db039ffd8f3"/>
 				<textElement>
 					<font fontName="Arial" size="11"/>
 				</textElement>
