--- a/MSR/MSR-4.1-Sentinel-BU.jrxml
+++ b/MSR/MSR-4.1-Sentinel-BU.jrxml
@@ -91,7 +91,8 @@
        nda
   FROM msr.avq_users 
   WHERE LOWER(customer) = $P{customer} 
-  AND export_date = to_date(  $P{selected_date}  , 'YYYYMMDD')]]>
+  AND export_date = to_date(  $P{selected_date}  , 'YYYYMMDD')
+  AND lower(accountstatus) = 'open']]>
 		</queryString>
 		<field name="rownum" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="rownum"/>
@@ -152,10 +153,12 @@
   FROM msr.avq_users 
   WHERE LOWER(customer) = $P{customer} 
   AND export_date = to_date( $P{selected_date} , 'YYYYMMDD')
+  AND lower(accountstatus) = 'open'
   AND user_name NOT IN (SELECT AC2.user_name 
   						FROM msr.avq_users AC2 
   						WHERE LOWER(AC2.customer) = $P{customer} 
-  						AND AC2.export_date =  to_date($P{selected_date}, 'YYYYMMDD') - interval '1 month')]]>
+  						AND AC2.export_date =  to_date($P{selected_date}, 'YYYYMMDD') - interval '1 month'
+  						AND lower(AC2.accountstatus) = 'open')]]>
 		</queryString>
 		<field name="rownum" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="rownum"/>
@@ -216,10 +219,12 @@
   FROM msr.avq_users 
   WHERE LOWER(customer) =  $P{customer} 
   AND export_date = to_date($P{selected_date} , 'YYYYMMDD') - interval '1 month'
+  AND lower(accountstatus) = 'open'
   AND user_name NOT IN (SELECT AC2.user_name 
   						FROM msr.avq_users AC2 
   						WHERE LOWER(AC2.customer) =  $P{customer} 
-  						AND AC2.export_date  =  to_date( $P{selected_date} , 'YYYYMMDD') )]]>
+  						AND AC2.export_date  =  to_date( $P{selected_date} , 'YYYYMMDD') 
+  						AND lower(AC2.accountstatus) = 'open')]]>
 		</queryString>
 		<field name="rownum" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="rownum"/>
@@ -271,7 +276,8 @@
 			<![CDATA[SELECT count(user_name) as nb_users
   FROM msr.avq_users 
   WHERE LOWER(customer) = $P{customer} 
-  AND export_date = to_date(  $P{selected_date}  , 'YYYYMMDD')]]>
+  AND export_date = to_date(  $P{selected_date}  , 'YYYYMMDD')
+  AND lower(accountstatus) in ('open', 'locked')]]>
 		</queryString>
 		<field name="nb_users" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="nb_users"/>
@@ -284,7 +290,7 @@
 		<defaultValueExpression><![CDATA["NEWSLETTER TITLE"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="customer" class="java.lang.String">
-		<defaultValueExpression><![CDATA["sb4"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["bsct"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="subsection" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
@@ -296,7 +302,7 @@
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
 	<parameter name="selectedDate" class="java.lang.String">
-		<defaultValueExpression><![CDATA["20190801"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["20191001"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[select 1]]>
@@ -357,7 +363,7 @@
 		<band height="59" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<componentElement>
-				<reportElement positionType="Float" x="71" y="37" width="70" height="16" uuid="17faf07d-b51b-4329-adba-8424c2e2aec5">
+				<reportElement positionType="Float" x="20" y="37" width="30" height="16" uuid="17faf07d-b51b-4329-adba-8424c2e2aec5">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table 1_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table 1_CH"/>
@@ -373,7 +379,7 @@
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="100" uuid="1e66e7dc-31e5-41d4-bf18-e41637993d04">
+					<jr:column width="40" uuid="1e66e7dc-31e5-41d4-bf18-e41637993d04">
 						<jr:detailCell style="Table 1_TD" height="20">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -384,7 +390,7 @@
 								<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 							</box>
 							<textField>
-								<reportElement style="NormalText" x="0" y="0" width="100" height="20" forecolor="#FF0400" uuid="440cb1b9-463e-4a0a-bd3d-07b6f9346171">
+								<reportElement style="NormalText" x="0" y="0" width="40" height="20" forecolor="#FF0400" uuid="440cb1b9-463e-4a0a-bd3d-07b6f9346171">
 									<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 								</reportElement>
 								<box>
@@ -393,7 +399,7 @@
 									<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 									<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 								</box>
-								<textElement>
+								<textElement textAlignment="Left">
 									<font size="12" isBold="true"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{nb_users}]]></textFieldExpression>
@@ -415,17 +421,17 @@
 				<textElement>
 					<font fontName="Arial" size="11"/>
 				</textElement>
-				<text><![CDATA[The number of all Avaloq Sourcing (Switzerland & Liechtenstein) SA user accounts on Sentinel BU with potential access to the system (incl. LOCKED]]></text>
+				<text><![CDATA[The number of all Avaloq Sourcing (Switzerland & Liechtenstein) SA user accounts on Sentinel BU having access to Client BU, with potential access to the system (incl. LOCKED]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="-2" y="37" width="72" height="18" isPrintWhenDetailOverflows="true" uuid="c15c8561-b5cb-4df3-939a-ed54d8680c54"/>
+				<reportElement style="NormalText" positionType="Float" x="-2" y="37" width="22" height="18" isPrintWhenDetailOverflows="true" uuid="c15c8561-b5cb-4df3-939a-ed54d8680c54"/>
 				<textElement>
 					<font fontName="Arial" size="11"/>
 				</textElement>
-				<text><![CDATA[accounts) is ]]></text>
+				<text><![CDATA[is ]]></text>
 			</staticText>
 		</band>
-		<band height="73">
+		<band height="81">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField bookmarkLevel="1">
 				<reportElement style="Header-4" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="730" height="20" uuid="d371daeb-de84-4348-ba20-61bcf2797fb9"/>
@@ -472,7 +478,7 @@
 								<textElement textAlignment="Right" markup="styled">
 									<paragraph rightIndent="2"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{rownum}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
@@ -618,7 +624,7 @@
 				</jr:table>
 			</componentElement>
 		</band>
-		<band height="30">
+		<band height="36">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$V{nbCurrentAccounts} == null]]></printWhenExpression>
 			<staticText>
@@ -629,7 +635,7 @@
 				<text><![CDATA[No Current Sentinel BU Accounts to report]]></text>
 			</staticText>
 		</band>
-		<band height="63">
+		<band height="73" splitType="Prevent">
 			<componentElement>
 				<reportElement x="0" y="20" width="730" height="35" isRemoveLineWhenBlank="true" uuid="f29b4cd7-8a85-46f1-ba74-6cbd1ff21aff">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
@@ -668,7 +674,7 @@
 								<textElement textAlignment="Right">
 									<paragraph rightIndent="2"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{rownum}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
@@ -820,7 +826,7 @@
 				<anchorNameExpression><![CDATA[$V{x.y.z_SentinelBuAccountsAdded}]]></anchorNameExpression>
 			</textField>
 		</band>
-		<band height="30">
+		<band height="35">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$V{nbAddedAccounts} == null]]></printWhenExpression>
 			<staticText>
@@ -831,7 +837,7 @@
 				<text><![CDATA[No Sentinel BU Accounts Added/Enabled to report]]></text>
 			</staticText>
 		</band>
-		<band height="63">
+		<band height="72" splitType="Prevent">
 			<textField bookmarkLevel="1">
 				<reportElement style="Header-4" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="730" height="20" uuid="55682856-8d9a-46be-b039-b1df4a55533e"/>
 				<textElement>
@@ -878,7 +884,7 @@
 								<textElement textAlignment="Right">
 									<paragraph rightIndent="2"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{rownum}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
@@ -924,9 +930,9 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+							<textField isStretchWithOverflow="true" isBlankWhenNull="false">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="165" height="17" uuid="ebd61b74-12d2-43e2-9e81-3301965e3d95"/>
-								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[IF($F{unit} == null, "N/A", $F{unit})]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
@@ -997,7 +1003,7 @@
 							<textField isStretchWithOverflow="true" isBlankWhenNull="false">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="55" height="17" uuid="c1f714ad-87f0-4a3a-b7d6-643c78b0bc42"/>
 								<textElement textAlignment="Center"/>
-								<textFieldExpression><![CDATA[IF($F{is_external}.equals("1"), "Yes", "No")]]></textFieldExpression>
+								<textFieldExpression><![CDATA[IF($F{is_external}.equals("1"), "Yes", IF($F{is_external}.equals("0"),"N/A", "N/A"))]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
@@ -1022,7 +1028,7 @@
 				</jr:table>
 			</componentElement>
 		</band>
-		<band height="30">
+		<band height="39">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$V{nbDeletedAccounts} == null]]></printWhenExpression>
 			<staticText>
